# airline-foundryiq-demo

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  azure.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
app/backend/: main.py
app/backend/agents/: __init__.py  customer_service_agent.py  loyalty_agent.py  operations_agent.py  orchestrator.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  index.css
docs/: AGENTS.md  architecture.md  deployment.md
infra/: main.bicep
infra/modules/: container-app.bicep  identity.bicep  openai.bicep  search.bicep  storage.bicep
scripts/: _common.sh  deploy.sh  setup_all.py  setup_indexes.sh  setup_knowledge_bases.sh  setup_knowledge_sources.sh  setup_rbac.sh  upload_sample_data.sh
tests/: test_agents.py  test_routing.py
