[project]
name = "airline-foundryiq-demo"
version = "1.0.0"
description = "Zava Airlines - Multi-Agent Orchestration with FoundryIQ and Bing Search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zava Airlines Team" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "W"]
